--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -47,7 +47,7 @@ services:
         restart: unless-stopped
 
 volumes:
-    # NOTE: Change /path/to/src to a directory on your local machine, where the InvenTree source code is located
+    # NOTE: Change "../" to a directory on your local machine, where the InvenTree source code is located
     # Persistent data, stored external to the container(s)
     src:
         driver: local
