Serve media files via nginx

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -34,4 +34,15 @@ server {
         add_header Cache-Control "public";
     }
 
+    # Redirect any requests for media files
+    location /media/ {
+        alias /var/www/media/;
+        autoindex on;
+
+        # Caching settings
+        expires 30d;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+    }
+
 }
