--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -2,10 +2,11 @@
 
 name: Python Bindings
 
-on:
-  push:
-    branches:
-      - 'master'
+#on:
+#  push:
+#    branches:
+#      - 'master'
+on: ["pull_request"]
 
 jobs:
 
@@ -32,7 +33,7 @@ jobs:
           invoke migrate
       - name: Download Python Code
         run: |
-          git clone --depth 1 https://github.com/inventee/inventree-python ./inventree-python
+          git clone --depth 1 https://github.com/inventree/inventree-python ./inventree-python
       - name: Start Server
         run: |
           invoke import-records -f ./inventree-python/test/test_data.json
