--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -2,11 +2,14 @@
 
 name: Python Bindings
 
-#on:
-#  push:
-#    branches:
-#      - 'master'
-on: ["pull_request"]
+on:
+  push:
+    branches:
+      - master
+
+  pull_request:
+    branches-ignore:
+      - l10*
 
 jobs:
 
