--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,10 +9,10 @@ version: "3.8"
 # ---------------------------------
 # IMPORTANT - READ BEFORE STARTING!
 # ---------------------------------
-# Before running, ensure that you change the "/path/to/data" directory,
-# specified in the "volumes" section at the end of this file.
-# This path determines where the InvenTree data will be stored!
-# 
+# Before running, ensure that you change the default values in your .env file
+# INVENTREE_DATA_PATH : This path determines where the InvenTree data will be stored!
+# POSTGRES_USER : This is the username used by Inventree 
+# POSTGRES_PASSWORD: The _secure_ password you choose to use for the db
 
 services:
     # Database service
@@ -26,9 +26,9 @@ services:
             - 5432/tcp
         environment:
             - PGDATA=/var/lib/postgresql/data/pgdb
-            # The pguser and pgpassword values must be the same in the other containers
-            - POSTGRES_USER=pguser
-            - POSTGRES_PASSWORD=pgpassword
+            # The POSTGRES_USER and POSTGRES_PASSWORD values must be the same in the other containers
+            - POSTGRES_USER=${POSTGRES_USER:?postgres_user}
+            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:?postgres_password}
         volumes:
             # Map 'data' volume such that postgres database is stored externally
             - data:/var/lib/postgresql/data/
@@ -47,11 +47,11 @@ services:
             # Data volume must map to /home/inventree/data
             - data:/home/inventree/data
         environment:
-            # Default environment variables are configured to match the 'db' container
+            # Default environment variables are configured to match the 'inventree-db' container
             # Note: If you change the database image, these will need to be adjusted
             # Note: INVENTREE_DB_HOST should match the container name of the database
-            - INVENTREE_DB_USER=pguser
-            - INVENTREE_DB_PASSWORD=pgpassword
+            - INVENTREE_DB_USER=${POSTGRES_USER:?postgres_user}
+            - INVENTREE_DB_PASSWORD=${POSTGRES_PASSWORD:?postgres_password}
             - INVENTREE_DB_ENGINE=postgresql
             - INVENTREE_DB_NAME=inventree
             - INVENTREE_DB_HOST=inventree-db
@@ -70,11 +70,11 @@ services:
             # Data volume must map to /home/inventree/data
             - data:/home/inventree/data
         environment:
-            # Default environment variables are configured to match the 'db' container
+            # Default environment variables are configured to match the 'inventree-db' container
             # Note: If you change the database image, these will need to be adjusted
             # Note: INVENTREE_DB_HOST should match the container name of the database
-            - INVENTREE_DB_USER=pguser
-            - INVENTREE_DB_PASSWORD=pgpassword
+            - INVENTREE_DB_USER=${POSTGRES_USER:?postgres_user}
+            - INVENTREE_DB_PASSWORD=${POSTGRES_PASSWORD:?postgres_password}
             - INVENTREE_DB_ENGINE=postgresql
             - INVENTREE_DB_NAME=inventree
             - INVENTREE_DB_HOST=inventree-db
@@ -103,7 +103,6 @@ services:
         restart: unless-stopped
 
 volumes:
-    # NOTE: Change /path/to/data to a directory on your local machine
     # Persistent data, stored external to the container(s)
     data:
         driver: local
@@ -112,4 +111,4 @@ volumes:
             o: bind
             # This directory specified where InvenTree data are stored "outside" the docker containers
             # Change this path to a local system path where you want InvenTree data stored
-            device: /path/to/data
+            device: ${INVENTREE_DATA_PATH:?data_path}
