--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -56,4 +56,4 @@ volumes:
             o: bind
             # This directory specified where InvenTree source code is stored "outside" the docker containers
             # By default, this directory is one level above the "docker" directory
-            device: ../
+            device: ${INVENTREE_SRC_PATH:?inventree_source_path}
