--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
 # Basic package requirements
-setuptools>=57.4.0
-wheel>=0.37.0
+setuptools>=57.4.0              # Setuptools
+wheel>=0.37.0                   # Wheel
 invoke>=1.4.0                   # Invoke build tool
-gunicorn>=20.1.0                # Gunicorn web server
-
-# Django framework
-Django==3.2.4                     # Django package
-
+Django==3.2.4                   # Django package
 pillow==8.2.0                   # Image manipulation
 djangorestframework==3.12.4     # DRF framework
 django-cors-headers==3.2.0      # CORS headers extension for DRF
@@ -19,7 +15,7 @@ coreapi==2.3.0                  # API documentation
 pygments==2.7.4                 # Syntax highlighting
 django-crispy-forms==1.11.2     # Form helpers
 django-import-export==2.5.0     # Data import / export for admin interface
-tablib[xls,xlsx,yaml]           # Support for XLS and XLSX formats
+tablib[xls,xlsx,yaml]==3.0.0    # Support for XLS and XLSX formats
 django-cleanup==5.1.0           # Manage deletion of old / unused uploaded files
 flake8==3.8.3                   # PEP checking
 pep8-naming==0.11.1             # PEP naming convention extension
@@ -33,12 +29,18 @@ django-debug-toolbar==2.2       # Debug / profiling toolbar
 django-admin-shell==0.1.2       # Python shell for the admin interface
 py-moneyed==0.8.0               # Specific version requirement for py-moneyed
 django-money==1.1               # Django app for currency management
-certifi                         # Certifi is (most likely) installed through one of the requirements above
 django-error-report==0.2.0      # Error report viewer for the admin interface
-django-test-migrations==1.1.0   # Unit testing for database migrations 
+django-test-migrations==1.1.0   # Unit testing for database migrations
 python-barcode[images]==0.13.1  # Barcode generator
 qrcode[pil]==6.1                # QR code generator
 django-q==1.3.4                 # Background task scheduling
+gunicorn==20.1.0                # Gunicorn web server
 django-formtools==2.3           # Form wizard tools
+psycopg2==2.9.1                 # PostgreSQL database adapter for Python
+mysqlclient==2.0.3              # Mysql client
+pgcli==3.1.0                    # Postgres client CLI
+mariadb==1.0.7                  # MariaDB Connector
+
+certifi                         # Certifi is (most likely) installed through one of the requirements above
 
 inventree                       # Install the latest version of the InvenTree API python library
