--- a/.github/workflows/mysql.yaml
+++ b/.github/workflows/mysql.yaml
@@ -30,14 +30,18 @@ jobs:
 
     services:
       mysql:
-        image: mysql:latest
+        image: mysql:5.7
         env:
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_DATABASE: inventree
           MYSQL_USER: inventree
           MYSQL_PASSWORD: password
           MYSQL_ROOT_PASSWORD: password
-        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
+        options: >-
+          --health-cmd="mysqladmin ping" 
+          --health-interval=5s 
+          --health-timeout=2s 
+          --health-retries=3
         ports:
           - 3306:3306
 
@@ -50,9 +54,11 @@ jobs:
           python-version: 3.7
       - name: Install Dependencies
         run: |
-          sudo apt-get install mysql-server libmysqlclient-dev
+          sudo apt-get install -y \
+            libmariadb3 libmariadb-dev \
+            sqlite \
+            libpq-dev
           pip3 install invoke
-          pip3 install mysqlclient
           invoke install
       - name: Run Tests
         run: invoke test
