--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -31,6 +31,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install python3-dev python3-pip python3-venv
+          sudo apt-get install -y \
+            libmariadb3 libmariadb-dev \
+            sqlite \
+            libpq-dev
           pip3 install invoke
           invoke install
           invoke migrate
