--- a/docker/dev-config.env
+++ b/docker/dev-config.env
@@ -1,3 +1,4 @@
+INVENTREE_HOME=/home/inventree
 INVENTREE_DB_ENGINE=sqlite3
 INVENTREE_DB_NAME=/home/inventree/dev/inventree_db.sqlite3
 INVENTREE_MEDIA_ROOT=/home/inventree/dev/media
@@ -7,3 +8,15 @@ INVENTREE_SECRET_KEY_FILE=/home/inventree/dev/secret_key.txt
 INVENTREE_DEBUG=true
 INVENTREE_WEB_ADDR=0.0.0.0
 INVENTREE_WEB_PORT=8000
+#Do not use for production!
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@abc.com
+DJANGO_SUPERUSER_PASSWORD=password
+
+#--
+#Add these variables to your .env file
+#--
+# Change this path to a local system path where you want InvenTree postgres data stored
+#INVENTREE_DEV_DB=/some/data/path/for/db
+#INVENTREE_SRC_DIR=/your/repo/path
+
