add sudo apt-get update before any apt-get install

--- a/.github/workflows/postgresql.yaml
+++ b/.github/workflows/postgresql.yaml
@@ -46,6 +46,7 @@ jobs:
           python-version: 3.7
       - name: Install Dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install -y \
             libmariadb3 libmariadb-dev \
             sqlite \
