Fix critical error in dockerfile
- Don't' be putting no spaces in!

--- a/docker/dev-config.env
+++ b/docker/dev-config.env
@@ -1,5 +1,7 @@
+# InvenTree environment variables for a development setup
+
 # Set DEBUG to False for a production environment!
-INVENTREE_DEBUG=true
+INVENTREE_DEBUG=True
 
 # Database linking options
 INVENTREE_DB_ENGINE=sqlite3
