Pull debug level out into the .env file

--- a/docker/dev-config.env
+++ b/docker/dev-config.env
@@ -3,6 +3,9 @@
 # Set DEBUG to False for a production environment!
 INVENTREE_DEBUG=True
 
+# Change verbosity level for debug output
+INVENTREE_DEBUG_LEVEL="INFO"
+
 # Database linking options
 INVENTREE_DB_ENGINE=sqlite3
 INVENTREE_DB_NAME=/home/inventree/dev/inventree_db.sqlite3
