Re-add docker file git version info

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,7 +44,9 @@ LABEL org.label-schema.schema-version="1.0" \
       org.label-schema.vendor="inventree" \
       org.label-schema.name="inventree/inventree" \
       org.label-schema.url="https://hub.docker.com/r/inventree/inventree" \
-      org.label-schema.vcs-url=${INVENTREE_REPO}
+      org.label-schema.vcs-url=${INVENTREE_GIT_REPO} \
+      org.label-schema.vcs-branch=${INVENTREE_GIT_BRANCH} \
+      org.label-schema.vss-ref=${INVENTREE_GIT_TAG}
 
 # Create user account
 RUN addgroup -S inventreegroup && adduser -S inventree -G inventreegroup
