--- a/docker/prod-config.env
+++ b/docker/prod-config.env
@@ -4,7 +4,7 @@
 
 # Ensure debug is false for a production setup
 INVENTREE_DEBUG=False
-INVENTREE_DEBUG_LEVEL="WARNING"
+INVENTREE_LOG_LEVEL="WARNING"
 
 # Database configuration
 # Note: The example setup is for a PostgreSQL database (change as required)
