Add a TODO for future reference

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -100,6 +100,8 @@ WORKDIR ${INVENTREE_MNG_DIR}
 ENTRYPOINT ["/bin/bash", "../docker/init.sh"]
 
 # Launch the production server
+# TODO: Work out why environment variables cannot be interpolated in this command
+# TODO: e.g. -b ${INVENTREE_WEB_ADDR}:${INVENTREE_WEB_PORT} fails here
 CMD gunicorn -c ./docker/gunicorn.conf.py InvenTree.wsgi -b 0.0.0.0:8000 --chdir ./InvenTree
 
 FROM base as dev
