Initial setup for development

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -11,6 +11,21 @@ version: "3.8"
 # The django server will auto-detect any code changes and reload the server.
 
 services:
+    inventree_db:
+        container_name: inventree_db
+        image: postgres:13
+        ports:
+            - 5432/tcp
+        environment:
+            - PGDATA=/home/inventree/data/pgdb
+            # The pguser and pgpassword values must be the same in the other containers
+            # Ensure that these are correctly configured in your prod-config.env file
+            - POSTGRES_USER=pguser
+            - POSTGRES_PASSWORD=pgpassword
+        volumes:
+            # Map 'data' volume such that postgres database is stored externally
+            - src:/home/inventree/data/
+        restart: unless-stopped
     # InvenTree web server services
     # Uses gunicorn as the web server
     inventree-dev-server:
@@ -21,6 +36,8 @@ services:
         ports:
             # Expose web server on port 8000
             - 8000:8000
+        depends_on:
+            - inventree_db
         volumes:
             # Ensure you specify the location of the 'src' directory at the end of this file
             - src:/home/inventree
@@ -37,6 +54,7 @@ services:
             target: dev
         command: invoke worker
         depends_on:
+            - inventree_db
             - inventree-dev-server
         volumes:
             # Ensure you specify the location of the 'src' directory at the end of this file
