--- a/docker/dev-config.env
+++ b/docker/dev-config.env
@@ -7,9 +7,9 @@ INVENTREE_DEBUG=True
 INVENTREE_DEBUG_LEVEL="INFO"
 
 # Database linking options
-INVENTREE_DB_ENGINE=sqlite3
-INVENTREE_DB_NAME=/home/inventree/dev/inventree_db.sqlite3
-# INVENTREE_DB_HOST=hostaddress
-# INVENTREE_DB_PORT=5432
-# INVENTREE_DB_USERNAME=dbuser
-# INVENTREE_DB_PASSWEORD=dbpassword
+INVENTREE_DB_ENGINE=postgresql
+INVENTREE_DB_NAME=inventree
+INVENTREE_DB_HOST=inventree_db
+INVENTREE_DB_PORT=5432
+INVENTREE_DB_USER=pguser
+INVENTREE_DB_PASSWORD=pgpassword
