--- a/requirements.txt
+++ b/requirements.txt
@@ -34,5 +34,6 @@ python-barcode[images]==0.13.1  # Barcode generator
 qrcode[pil]==6.1                # QR code generator
 django-q==1.3.4                 # Background task scheduling
 django-formtools==2.3           # Form wizard tools
+psycopg2>=2.9.1
 
 inventree                       # Install the latest version of the InvenTree API python library
