Fix for docker development env file

--- a/docker/dev-config.env
+++ b/docker/dev-config.env
@@ -4,7 +4,7 @@
 INVENTREE_DEBUG=True
 
 # Change verbosity level for debug output
-INVENTREE_DEBUG_LEVEL="INFO"
+INVENTREE_DEBUG_LEVEL=INFO
 
 # Database linking options
 INVENTREE_DB_ENGINE=sqlite3
