Install required files

--- a/.github/workflows/javascript.yaml
+++ b/.github/workflows/javascript.yaml
@@ -26,6 +26,16 @@ jobs:
       - run: npm install
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install gettext
+          pip3 install invoke
+          invoke install
       - name: Check Templated Files
         run: |
           cd ci
