Add required env vars

--- a/.github/workflows/javascript.yaml
+++ b/.github/workflows/javascript.yaml
@@ -20,6 +20,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       INVENTREE_DB_ENGINE: sqlite3
       INVENTREE_DB_NAME: inventree
+      INVENTREE_MEDIA_ROOT: ./media
+      INVENTREE_STATIC_ROOT: ./static
     steps:
       - name: Install node.js
         uses: actions/setup-node@v2
