--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,6 +7,7 @@ env:
 extends: 'eslint:recommended'
 parserOptions:
   ecmaVersion: 12
+  sourceType: module
 rules:
   accessor-pairs: error
   array-bracket-newline: 'off'
