--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,5 @@
 env:
-  commonjs: true
+  commonjs: false
   es6: true
   browser: true
   es2021: true
@@ -7,7 +7,7 @@ env:
 extends: 'eslint:recommended'
 parserOptions:
   ecmaVersion: 12
-  sourceType: module
+  sourceType: 'script'
 rules:
   accessor-pairs: error
   array-bracket-newline: 'off'
