--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,252 +1,10 @@
 env:
   commonjs: false
-  es6: true
   browser: true
   es2021: true
   jquery: true
-extends: 'eslint:recommended'
+extends:
+  - google
 parserOptions:
   ecmaVersion: 12
-  sourceType: 'script'
-rules:
-  accessor-pairs: error
-  array-bracket-newline: 'off'
-  array-bracket-spacing:
-    - error
-    - never
-  array-callback-return: error
-  array-element-newline: 'off'
-  arrow-body-style: error
-  arrow-parens:
-    - error
-    - as-needed
-  arrow-spacing: 'off'
-  block-scoped-var: 'off'
-  block-spacing: 'off'
-  brace-style: 'off'
-  camelcase: 'off'
-  capitalized-comments: 'off'
-  class-methods-use-this: error
-  comma-dangle: 'off'
-  comma-spacing: 'off'
-  comma-style:
-    - error
-    - last
-  complexity: 'off'
-  computed-property-spacing:
-    - error
-    - never
-  consistent-return: 'off'
-  consistent-this: 'off'
-  curly: 'off'
-  default-case: 'off'
-  default-case-last: 'off'
-  default-param-last: error
-  dot-location: error
-  dot-notation: 'off'
-  eol-last: 'off'
-  eqeqeq: 'off'
-  func-call-spacing: error
-  func-name-matching: error
-  func-names: 'off'
-  func-style:
-    - error
-    - declaration
-  function-call-argument-newline: 'off'
-  function-paren-newline: 'off'
-  generator-star-spacing: error
-  grouped-accessor-pairs: error
-  guard-for-in: 'off'
-  id-denylist: error
-  id-length: 'off'
-  id-match: error
-  implicit-arrow-linebreak:
-    - error
-    - beside
-  indent: 'off'
-  init-declarations: error
-  jsx-quotes: error
-  key-spacing: 'off'
-  keyword-spacing: 'off'
-  line-comment-position: 'off'
-  linebreak-style:
-    - error
-    - unix
-  lines-around-comment: 'off'
-  lines-between-class-members: error
-  max-classes-per-file: error
-  max-depth: error
-  max-len: 'off'
-  max-lines: 'off'
-  max-lines-per-function: 'off'
-  max-nested-callbacks: error
-  max-params: 'off'
-  max-statements: 'off'
-  max-statements-per-line: 'off'
-  multiline-comment-style: 'off'
-  new-cap: error
-  new-parens: error
-  newline-per-chained-call: 'off'
-  no-alert: 'off'
-  no-array-constructor: 'off'
-  no-await-in-loop: error
-  no-bitwise: error
-  no-caller: error
-  no-confusing-arrow: error
-  no-console: 'off'
-  no-constructor-return: error
-  no-continue: 'off'
-  no-div-regex: error
-  no-duplicate-imports: error
-  no-else-return: 'off'
-  no-empty-function: 'off'
-  no-eq-null: 'off'
-  no-eval: error
-  no-extend-native: error
-  no-extra-bind: error
-  no-extra-label: error
-  no-extra-parens: 'off'
-  no-floating-decimal: error
-  no-implicit-coercion:
-    - error
-    - boolean: false
-      disallowTemplateShorthand: false
-      number: false
-      string: false
-  no-implicit-globals: 'off'
-  no-implied-eval: error
-  no-inline-comments: 'off'
-  no-inner-declarations:
-    - error
-    - functions
-  no-invalid-this: error
-  no-iterator: error
-  no-label-var: error
-  no-labels: error
-  no-lone-blocks: error
-  no-lonely-if: error
-  no-loop-func: 'off'
-  no-loss-of-precision: error
-  no-magic-numbers: 'off'
-  no-mixed-operators:
-    - error
-    - allowSamePrecedence: true
-  no-multi-assign: error
-  no-multi-spaces:
-    - error
-    - ignoreEOLComments: true
-  no-multi-str: error
-  no-multiple-empty-lines: 'off'
-  no-negated-condition: 'off'
-  no-nested-ternary: error
-  no-new: error
-  no-new-func: error
-  no-new-object: error
-  no-new-wrappers: error
-  no-nonoctal-decimal-escape: error
-  no-octal-escape: error
-  no-param-reassign: 'off'
-  no-plusplus: 'off'
-  no-promise-executor-return: error
-  no-proto: error
-  no-restricted-exports: error
-  no-restricted-globals: error
-  no-restricted-imports: error
-  no-restricted-properties: error
-  no-restricted-syntax: error
-  no-return-assign: error
-  no-return-await: error
-  no-script-url: error
-  no-self-compare: error
-  no-sequences: 'off'
-  no-shadow: 'off'
-  no-tabs: error
-  no-template-curly-in-string: error
-  no-ternary: 'off'
-  no-throw-literal: error
-  no-trailing-spaces: 'off'
-  no-undef-init: error
-  no-undefined: 'off'
-  no-underscore-dangle: 'off'
-  no-unmodified-loop-condition: error
-  no-unneeded-ternary: error
-  no-unreachable-loop: error
-  no-unsafe-optional-chaining: error
-  no-unused-expressions: 'off'
-  no-use-before-define: 'off'
-  no-useless-backreference: error
-  no-useless-call: error
-  no-useless-computed-key: error
-  no-useless-concat: error
-  no-useless-constructor: error
-  no-useless-rename: error
-  no-useless-return: error
-  no-var: 'off'
-  no-void: error
-  no-warning-comments: 'off'
-  no-whitespace-before-property: error
-  nonblock-statement-body-position: error
-  object-curly-newline: error
-  object-curly-spacing: 'off'
-  object-property-newline: 'off'
-  object-shorthand: 'off'
-  one-var: 'off'
-  one-var-declaration-per-line: error
-  operator-assignment:
-    - error
-    - always
-  operator-linebreak: error
-  padded-blocks: 'off'
-  padding-line-between-statements: error
-  prefer-arrow-callback: 'off'
-  prefer-const: 'off'
-  prefer-destructuring: 'off'
-  prefer-exponentiation-operator: error
-  prefer-named-capture-group: 'off'
-  prefer-numeric-literals: error
-  prefer-object-spread: error
-  prefer-promise-reject-errors: error
-  prefer-regex-literals: error
-  prefer-rest-params: error
-  prefer-spread: 'off'
-  prefer-template: 'off'
-  quote-props: 'off'
-  quotes: 'off'
-  radix: 'off'
-  require-atomic-updates: error
-  require-await: error
-  require-unicode-regexp: 'off'
-  rest-spread-spacing: error
-  semi: 'off'
-  semi-spacing:
-    - error
-    - after: true
-      before: false
-  semi-style:
-    - error
-    - last
-  sort-imports: error
-  sort-keys: 'off'
-  sort-vars: error
-  space-before-blocks: 'off'
-  space-before-function-paren: 'off'
-  space-in-parens: 'off'
-  space-infix-ops: 'off'
-  space-unary-ops: 'off'
-  spaced-comment: 'off'
-  strict: 'off'
-  switch-colon-spacing: error
-  symbol-description: error
-  template-curly-spacing:
-    - error
-    - never
-  template-tag-spacing: error
-  unicode-bom:
-    - error
-    - never
-  vars-on-top: 'off'
-  wrap-regex: error
-  yield-star-spacing: error
-  yoda:
-    - error
-    - never
+rules: {}
