--- a/.github/workflows/javascript.yaml
+++ b/.github/workflows/javascript.yaml
@@ -25,9 +25,7 @@ jobs:
     steps:
       - name: Install node.js
         uses: actions/setup-node@v2
-      - run: |
-          npm install
-          npm install eslint eslint-config-google
+      - run: npm install
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: Setup Python
@@ -47,5 +45,6 @@ jobs:
           python check_js_templates.py
       - name: Lint Javascript Files
         run: |
+          npm install eslint eslint-config-google
           invoke render-js-files
           npx eslint js_tmp/*.js
