--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,6 +8,13 @@ extends:
 parserOptions:
   ecmaVersion: 12
 rules:
+  no-var: off
+  guard-for-in: off
+  no-trailing-spaces: off
+  camelcase: off
+  padded-blocks: off
+  prefer-const: off
+  max-len: off
   indent:
     - error
     - 4
