--- a/InvenTree/config_template.yaml
+++ b/InvenTree/config_template.yaml
@@ -141,6 +141,14 @@ static_root: '/home/inventree/data/static'
 #  - git
 #  - ssh
 
+# Login configuration
+# How long do confirmation mail last?
+# Use environment variable INVENTREE_LOGIN_CONFIRM_DAYS
+#login_confirm_days: 3
+# How many wrong login attempts are permitted?
+# Use environment variable INVENTREE_LOGIN_ATTEMPTS
+#login_attempts: 5
+
 # Permit custom authentication backends
 #authentication_backends:
 #  - 'django.contrib.auth.backends.ModelBackend'
